# nsfw-detector

./: Cargo.toml  Dockerfile
.github/workflows/: docker-hub.yml
src/: dto.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
