[package]
name = "nsfw_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.5.1"
env_logger = "0.11.3"
futures = "0.3.30"
image = "0.24.7"
log = "0.4.21"
nsfw = "0.1.1"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.61"
tokio = "1.37.0"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["actix-web"] }
